--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
       <% end %>
       <%= yield %>
       <%= render 'layouts/footer' %>
+			<pre class="debug_dump"><%= current_user.inspect if Rails.env.development? %></pre>
       <%= debug(params) if Rails.env.development? %>
     </div>
   </body>
