--- a/app/views/devices/_form.html.erb
+++ b/app/views/devices/_form.html.erb
@@ -11,34 +11,34 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :id %>
-    <%= f.text_field :id %>
+  <div class="field form-group">
+    <%= f.label :uid %>
+    <%= f.text_field :uid, class: "form-control" %>
   </div>
 
-  <div class="field">
+  <div class="field form-group">
     <%= f.label :name %>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, class: "form-control" %>
   </div>
 
-  <div class="field">
+  <div class="field form-group">
     <%= f.label :location %>
-    <%= f.text_field :location %>
+    <%= f.text_field :location, class: "form-control" %>
   </div>
 
-  <div class="field">
+  <div class="field form-group">
     <%= f.label :description %>
-    <%= f.text_area :description %>
+    <%= f.text_area :description, class: "form-control" %>
   </div>
 
-  <div class="field">
+  <div class="field form-group">
     <%= f.label :access_token %>
-    <%= f.text_field :access_token %>
+    <%= f.text_field :access_token, class: "form-control" %>
   </div>
 
-  <div class="field">
+	<div class="field form-group">
     <%= f.label :last_contact_at %>
-    <%= f.datetime_select :last_contact_at %>
+    <%= f.text_field :last_contact_at, class: "form-control" %>
   </div>
 
   <div class="actions">
