--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,9 @@
       <% end %>
       <%= yield %>
       <%= render 'layouts/footer' %>
-			<pre class="debug_dump"><%= current_user.inspect if Rails.env.development? %></pre>
+			<%= debug(instance_variables) if Rails.env.development? %>
+			<%= debug(local_variables) if Rails.env.development? %>
+			<%= debug(current_user.inspect) if Rails.env.development? %>
       <%= debug(params) if Rails.env.development? %>
     </div>
   </body>
