--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,32 +1,1 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
-<div class="navbar-inner">
-  <div class="container">
-    <%= link_to "Deivce Manager", root_path, id: "logo" %>
-    <nav>
-      <ul class="nav navbar-nav navbar-right">
-				<li><%= link_to "Devices", devices_path %></li>
-        <li><%= link_to "Groups of Devices",   '#' %></li>
-				<% if user_signed_in? %>
-					<li><%= link_to "Users", '#' %></li>
-					<li id="fat-menu" class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                Account <b class="caret"></b>
-              </a>
-              <ul class="dropdown-menu">
-                <li><%= link_to "Profile", '#' %></li>
-                <li><%= link_to "Settings", edit_user_registration_path %></li>
-                <li class="divider"></li>
-                <li>
-                  <%= link_to "Sign out", destroy_user_session_path, method: "delete" %>
-                </li>
-              </ul>
-					</li>
-
-				<% else %>
-	        <li><%= link_to "Sign in", user_session_path %></li>
-				<% end %>
-      </ul>
-    </nav>
-  </div>
-</div>
-</header>
+<header class="navbar navbar-fixed-top navbar-inverse">  <div class="navbar-inner">    <div class="container">      <!-- Brand and toggle get grouped for better mobile display -->      <div class="navbar-header">        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">          <span class="sr-only">Toggle navigation</span>          <span class="icon-bar"></span>          <span class="icon-bar"></span>          <span class="icon-bar"></span>        </button>        <%= link_to "Deivce Manager", root_path, id: "logo", class: "navbar-brand" %>      </div>      <!-- Collect the nav links, forms, and other content for toggling -->      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">        <ul class="nav navbar-nav navbar-right">          <li><%= link_to "Devices", devices_path %></li>          <li><%= link_to "Groups of Devices",   '#' %></li>          <% if user_signed_in? %>              <li><%= link_to "Users", '#' %></li>              <li id="fat-menu" class="dropdown">                <a href="#" class="dropdown-toggle" data-toggle="dropdown">                  Account <b class="caret"></b>                </a>                <ul class="dropdown-menu">                  <li><%= link_to "Profile", '#' %></li>                  <li><%= link_to "Settings", edit_user_registration_path %></li>                  <li class="divider"></li>                  <li>                    <%= link_to "Sign out", destroy_user_session_path, method: "delete" %>                  </li>                </ul>              </li>          <% else %>              <li><%= link_to "Sign in", user_session_path %></li>          <% end %>        </ul>        </nav>      </div>    </div>  </div></header>
