--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -1,30 +1,32 @@
-<p id="notice"><%= notice %></p>
-
 <h1>User Devices List</h1>
 
-
 <div class="row">
-  <div class="col-xs-10">Name</div>
-	<div class="col-xs-2">Actions</div>
+  <div class="col-xs-5">Name</div>
+  <div class="col-xs-5">Location</div>
+  <div class="col-xs-2">Actions</div>
 </div>
 
-<% @devices.each do |device| %>
-	<div class="row">
-		<div class="col-xs-10"><%= device.name %></div>
-		<div class="col-xs-2">
-			<%= link_to(device) do %>
-				<span class="glyphicon glyphicon-zoom-in"></span>
-			<% end %> |
-			<%= link_to edit_device_path(device) do%>
-				<span class="glyphicon glyphicon-pencil"></span> 
-      <% end %>  |
-			<%= link_to device, method: :delete, data: { confirm: 'Are you sure?' } do %>
-				<span class="glyphicon glyphicon-remove"></span> 
-      <% end %>
-		</div>
-	</div>
-<% end %>
+<hr/>
 
-<hr>
+<% @devices.each do |device| %>
+
+    <div class="row">
+      <div class="col-xs-5"><%= device.name %></div>
+      <div class="col-xs-5"><%= device.location %></div>
+      <div class="col-xs-2">
+        <%= link_to(device) do %>
+            <span class="glyphicon glyphicon-zoom-in"></span>
+        <% end %> |
+        <%= link_to edit_device_path(device) do%>
+            <span class="glyphicon glyphicon-pencil"></span>
+        <% end %>  |
+        <%= link_to device, method: :delete, data: { confirm: 'Are you sure?' } do %>
+            <span class="glyphicon glyphicon-remove"></span>
+        <% end %>
+      </div>
+    </div>
+
+    <hr/>
+<% end %>
 
 <%= link_to 'New Device', new_device_path %>
