--- a/app/views/devices/new.html.erb
+++ b/app/views/devices/new.html.erb
@@ -1,6 +1,8 @@
 <h1>New Device</h1>
 
-<%= render 'form', device: @device %>
+<%= render 'device_form', device: @device %>
+
+<%= render 'device_properties_form', device_property: @device_property %>
 
 <hr>
 
