--- a/app/views/devices/edit.html.erb
+++ b/app/views/devices/edit.html.erb
@@ -1,6 +1,8 @@
 <h1>Editing Device</h1>
 
-<%= render 'form', device: @device %>
+<%= render 'device_form', device: @device %>
+
+<%= render 'properties_form', device: @device %>
 
 <hr>
 
