--- a/app/views/devices/edit.html.erb
+++ b/app/views/devices/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Device</h1>
 
-<%= render 'device_form', device: @device %>
+<%= render 'device', device: @device %>
 
 <%= render 'properties_form', device: @device %>
 
