--- a/app/views/devices/_device_property.html.erb
+++ b/app/views/devices/_device_property.html.erb
@@ -1,6 +1,10 @@
+<%= device_property.inspect %>
+
+
+
 <div class="device-property">
 
-   <%= fields_for create_properties_prefix(device_property), device_property, index: device_property.id do |pf| %>
+  <%= fields_for create_properties_prefix(device_property), device_property, index: device_property.id do |pf| %>
 
       <div class="row">
 
