--- a/app/views/devices/new.html.erb
+++ b/app/views/devices/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Device</h1>
 
-<%= render partial: 'device' %>
+<%= render partial: 'device', object: @device, locals: { device_form_template: @device_form_template} %>
 
 <hr>
 
