--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -1,4 +1,10 @@
-<h1>User Devices List</h1>
+<!-- This provides the title for the page-->
+<% provide(:title, "Device List") %>
+<!-- Dont remove the previous -->
+
+<div class="well">
+  <h1>Devices List</h1>
+</div>
 
 <div class="row">
   <div class="col-xs-5">Name</div>
