--- a/app/assets/javascripts/device_properties.js.erb
+++ b/app/assets/javascripts/device_properties.js.erb
@@ -2,7 +2,8 @@ function remove_property() {
     $('#device-properties .device-property#' + $(this).attr('id')).remove();
 }
 
-$(document).ready(function () {
+
+function document_ready() {
 
     $('#add_new_property').click(function () {
 
@@ -22,4 +23,8 @@ $(document).ready(function () {
 
     $('#device-properties .device-property button').on('click', remove_property);
 
-});
+}
+
+
+//$(document).ready( call-to-function );
+$(document).on("turbolinks:load", document_ready); // we need this because of turbolinks
