--- a/app/views/devices/_device_property.html.erb
+++ b/app/views/devices/_device_property.html.erb
@@ -78,7 +78,7 @@
 
         <div class="col-xs-12">
           <div class="field form-group">
-            <button type="button" id="0" class="remove-new-property form-control">Remove Property</button>
+            <button type="button" id="<%= device_property_counter %>" class="remove-new-property form-control">Remove Property</button>
           </div>
         </div>
 
