--- a/app/views/devices/new.html.erb
+++ b/app/views/devices/new.html.erb
@@ -1,8 +1,8 @@
 <!-- This provides the title for the page-->
-<% provide(:title, "Create New Device") %>
+<% provide(:title, 'Create New Device') %>
 <!-- Dont remove the previous -->
 
-<div class="well">
+<div class='well'>
   <h1>Create Device</h1>
 </div>
 
