--- a/app/assets/javascripts/device_properties.js.erb
+++ b/app/assets/javascripts/device_properties.js.erb
@@ -1,30 +1,29 @@
-function remove_property() {
+function add_device_property() {
+    // find the current id into the dom
+    var current_device_dom_id = parseInt($('#device-properties .device-property').last().attr('id'));
+    if (!current_device_dom_id) { current_device_dom_id = 0; }
+//    console.log('ADD:', current_device_dom_id); // TODO: delete
+    var next_device_dom_id = current_device_dom_id + 1;
+    // prepare the template with the ids
+    var new_device_property_template = $('#new-device-property-template');
+    new_device_property_template.find('.device-property').attr('id', next_device_dom_id);
+    new_device_property_template.find('.remove-device-property').attr('id', next_device_dom_id);
+    // and now create the new entry
+    var device_properties = $('#device-properties');
+    device_properties.append(new_device_property_template.html());
+    device_properties.find('.device-property#' + next_device_dom_id + ' button').on('click', remove_device_property);
+}
+
+function remove_device_property() {
+//    console.log('REMOVE:', parseInt($(this).attr('id'))); // TODO: delete
     $('#device-properties .device-property#' + $(this).attr('id')).remove();
 }
 
-
 function document_ready() {
-
-    $('#add_new_property').click(function () {
-
-        var cur_id = $('#device-properties .device-property').last().attr('id');
-        if (!cur_id) { cur_id = 0; }
-        var next_id = parseInt(cur_id) + 1;
-
-        $('#new-device-property-template .device-property').attr('id', next_id);
-        $('#new-device-property-template .device-property .remove-new-property').attr('id', next_id);
-
-        var new_property_template = $('#new-device-property-template').html();
-        $('#device-properties').append(new_property_template);
-
-        $('#device-properties .device-property#' + next_id + ' button').on('click', remove_property);
-
-    });
-
-    $('#device-properties .device-property button').on('click', remove_property);
-
+//    alert('The Document is Ready!!!');
+    $('#add-new-property').on('click', add_device_property);
+    $('#device-properties .device-property button').on('click', remove_device_property);
 }
 
-
-//$(document).ready( call-to-function );
+//$(document).ready( call-to-function ); // classic jQuery way but we use turbolinks
 $(document).on("turbolinks:load", document_ready); // we need this because of turbolinks
