Remove property_type

--- a/app/views/devices/_device.html.erb
+++ b/app/views/devices/_device.html.erb
@@ -41,6 +41,6 @@
 
 <% end -%>
 
-<div id='new-device-property-template' style='display: none;'>
+<div id='new-device-property-template' class="hidden">
   <%= render partial: 'device_property', collection: device_form_template.device_properties %>
 </div>
