--- a/app/views/devices/_device_property.html.erb
+++ b/app/views/devices/_device_property.html.erb
@@ -7,7 +7,7 @@
 
     <div class='row'>
 
-      <div class='col-xs-7'>
+      <div class='col-xs-3'>
         <div class='field form-group'>
           <%= property_form.label :name, 'Prop Name' %>
           <%= property_form.text_field :name, class: 'form-control' %>
@@ -25,47 +25,32 @@
         </div>
       </div>
 
-      <div class='col-xs-3'>
-        <div class='field form-group'>
-          <%= property_form.label :property_value %>
-          <%= property_form.text_field :property_value, class: 'form-control' %>
-        </div>
-      </div>
-
-    </div>
-
-    <div class='row'>
-
-      <div class='col-xs-3'>
-        <div class='field form-group'>
-          <%= property_form.label :property_type_id, 'Prop Type' %>
-          <%= property_form.select(:property_type_id, {}, {},  { class: 'form-control' } ) do %>
-            <%=  option_groups_from_collection_for_select( @prop_types, :value_types, :name, :id, :name )  %>
-          <% end %>
-        </div>
-      </div>
-
-      <div class='col-xs-3'>
+			<div class='col-xs-2'>
         <div class='field form-group'>
           <%= property_form.label :value_min %>
           <%= property_form.number_field :value_min, class: 'form-control' %>
         </div>
       </div>
 
-      <div class='col-xs-3'>
+      <div class='col-xs-2'>
         <div class='field form-group'>
           <%= property_form.label :value_max %>
           <%= property_form.number_field :value_max, class: 'form-control' %>
         </div>
       </div>
 
-    </div>
 
-    <div class='row'>
-
-      <div class='col-xs-12'>
+      <div class='col-xs-2'>
         <div class='field form-group'>
-          <button type='button' class='remove-device-property form-control' id='<%= device_property_counter %>'>Remove This Property</button>
+          <%= property_form.label :property_value %>
+          <%= property_form.text_field :property_value, class: 'form-control' %>
+        </div>
+      </div>
+
+
+      <div class='col-xs-1'>
+        <div class='field form-group'>
+          <button type='button' class='remove-device-property form-control' id='<%= device_property_counter %>'>X</button>
         </div>
       </div>
 
