--- a/app/views/devices/show.html.erb
+++ b/app/views/devices/show.html.erb
@@ -36,7 +36,7 @@
           </div>
 
           <div class="col-xs-4">
-            <%= property.property_value %>
+            <%= property.value %>
           </div>
 
           <div class="col-xs-4">
